# openomf-scaler-xbrz

./: .gitignore  CMakeLists.txt  README.md
include/: plugin_api.h  scaler_api.h
include/xbrz/: xbrz.h
src/: scaler_xbrz.cpp
src/xbrz/: xbrz.cpp
